# learn_FastAPI

./: .gitignore  README.MD  main.py  other_api.py  pyproject.toml  requirements.txt
core/: settings.py
core/models/: __init__.py  base.py  db_helper.py  item.py
