[project]
name = "learnfastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "vladek",email = "vladekmr.ur@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
